--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-telegram==3.17
+python-telegram-bot==20.7
 requests==2.31.0
 beautifulsoup4==4.12.2
 selenium==4.15.0
 webdriver-manager==4.0.1
 lxml==4.9.3
-python-telegram-bot==20.7
+aiohttp==3.9.1
